--- a/css/style_git.css
+++ b/css/style_git.css
@@ -123,7 +123,7 @@ li:hover ul{
 aside{
     /*background-color: blue;*/
     width: 28%;
-    float: left;
+    float: right;
     margin-left: 30px;
     height: auto;
     padding-left: 30px;
@@ -146,9 +146,9 @@ figure{
 
 }
 img{
-width: 80%;
+width: 60%;
     height: auto;
-   	margin-left: 175px; 
+   	margin-left: 0px; 
     }
 
     footer{
