--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,9 @@ footer img{
     width: auto;
 }
 
+.foto{width: 400px; height: auto;}
+.texto{width: inherit; color:black; font-size: 25px; font-family: 'Libre Franklin', sans-serif; text-align: center; }
+
 .menu:link{color: white; text-decoration:none}
 .menu:visited{color: white; text-decoration:none}    
 .menu:hover{ color: #006680;text-decoration:none}
